objects/ssot__BusOperProcCmplPlcyClVer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessOperationProcessId__c</fullName>
        <label>Business Operation Process</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompliancePolicyClauseVersionId__c</fullName>
        <label>Compliance Policy Clause Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Bus Oper Proc Cmpl Plcy Cl Ver Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752762723861_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusOperProcCmplPlcyClVer_ComplianceP_rel</label>
        <referenceTo>ssot__CompliancePolicyClauseVersion__dlm</referenceTo>
        <relationshipLabel>BusOperProcCmplPlcyClVer_ComplianceP_rel</relationshipLabel>
        <relationshipName>rel_1752762723861_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>